# DockerBeam

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md
snap/: snapcraft.yaml
src/: cli.rs  clientbeam.rs  connectionHandler.rs  dockerHandler.rs  io.rs  main.rs  serverbeacon.rs  webrtcControl.rs
